<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/histScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".training.HistTrainning">

    <!-- Barra superior -->
    <include
        android:id="@+id/topBarInclude"
        layout="@layout/layout_top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Texto: Mis entrenamientos -->
    <TextView
        android:id="@+id/sessionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_misEntrenamientos"
        android:textColor="@color/text_white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarInclude" />

    <!-- Tarjeta de sesión -->
    <LinearLayout
        android:id="@+id/sessionCard"
        android:layout_width="398dp"
        android:layout_height="137dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="#666666"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sessionLabel">

        <!-- Encabezado con ícono, texto, acciones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/icon_check"
                android:src="@drawable/baseline_check_circle_24"
                app:tint="@color/text_white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/ex_training2"
                android:textColor="@color/text_white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/idVisualizarEntrenamiento"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icon_eye"
                android:src="@drawable/baseline_remove_red_eye_24"
                app:tint="@color/text_white" />


            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icon_edit"
                android:src="@drawable/baseline_edit_24"
                app:tint="@color/text_white" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/cd_eliminar"
                android:src="@drawable/baseline_delete_24"
                app:tint="@color/text_white" />
        </LinearLayout>




    </LinearLayout>



    <!-- Barra inferior -->
    <FrameLayout
        android:id="@+id/bottomNavWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/layout_bottom_nav" />
    </FrameLayout>

    <!-- Recuadro de visualización, oculto por defecto "gone"-->

    <TextView
        android:id="@+id/previewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previsualizacion"
        android:textColor="@color/text_white"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/sessionCard"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/previewBlock"
        android:layout_width="398dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="#666666"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sessionCard">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/ex_training2"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/calentamiento_10_min"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/sentadilla_4_series_10_rep"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/flexiones_4_series_10_rep"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/dominadas_4_series_10_rep"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/abdominales_4_series_10_rep"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/enfriamiento_10_min"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
