<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/help_activities"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/black">

     <!-- Título -->
    <TextView
        android:id="@+id/helpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/centro_de_asistencia"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp" />

    <!-- Botones -->
    <Button
        android:id="@+id/btnFirstStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/primeros_pasos"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:backgroundTint="#4F83FF"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnFaq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preguntas_frecuentes_faq"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:backgroundTint="#FF8A65"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnServicioTecnico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/servicio_tecnico"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:backgroundTint="#9E9E9E"
        android:layout_marginBottom="16dp" />

</LinearLayout>
