<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/planScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".training.VisualizarPlanificacionActivity">

    <!-- Barra superior -->
    <include
        android:id="@+id/topBarInclude"
        layout="@layout/layout_top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Texto: Sesiones creadas -->
    <TextView
        android:id="@+id/sessionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_sesion_creada"
        android:textColor="@color/text_white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarInclude" />

    <!-- Tarjeta de sesión -->
    <LinearLayout
        android:id="@+id/sessionCard"
        android:layout_width="396dp"
        android:layout_height="330dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="#666666"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sessionLabel">

        <!-- Encabezado con ícono, texto, acciones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/icon_check"
                android:src="@drawable/baseline_check_circle_24"
                app:tint="@color/text_white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/ex_training"
                android:textColor="@color/text_white"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icon_edit"
                android:src="@drawable/baseline_edit_24"
                app:tint="@color/text_white" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/cd_eliminar"
                android:src="@drawable/baseline_delete_24"
                app:tint="@color/text_white" />
        </LinearLayout>

    </LinearLayout>


    <!-- Botón Planificar -->
    <Button
        android:id="@+id/btnPlan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/blue"
        android:drawableEnd="@drawable/baseline_edit_24"
        android:text="@string/btn_planificar"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sessionCard" />

    <!-- Barra inferior -->
    <FrameLayout
        android:id="@+id/bottomNavWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/layout_bottom_nav" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
