<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startTrainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".training.StartTraining">

    <!-- Barra superior -->
    <include
        android:id="@+id/topBarInclude"
        layout="@layout/layout_top_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Título de selección de ejercicio -->


    <!-- Temporizador -->

    <!-- Series y Repeticiones -->
    <TextView
        android:id="@+id/textEjercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/elige_el_ejercicio"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarInclude" />

    <TextView
        android:id="@+id/textTimer"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:background="#666666"
        android:gravity="center"
        android:text="@string/cronometro"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textEjercicio" />

    <LinearLayout
        android:id="@+id/layoutSeriesRep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textTimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textSeries"
            android:layout_width="0dp"
            android:layout_height="118dp"
            android:layout_weight="1"
            android:background="#FFF9C4"
            android:gravity="center"
            android:text="@string/series"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textRepeticiones"
            android:layout_width="0dp"
            android:layout_height="118dp"
            android:layout_weight="1"
            android:background="#FFF9C4"
            android:gravity="center"
            android:text="@string/repeticion"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Selector de peso -->

    <!-- Botón Empezar -->

    <!-- Barra inferior -->

    <LinearLayout
        android:id="@+id/layoutPeso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/text_white"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutSeriesRep">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/peso"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/spinnerPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="150dp"
            android:text="@string/peso_corporal"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/empezar"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPeso" />

    <FrameLayout
        android:id="@+id/bottomNavWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <include layout="@layout/layout_bottom_nav" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
